apps/production/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: production
  labels:
    app: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.1.1
        args: ["start", "--cache-stack=kubernetes", "--spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true"]
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: jgroups
          containerPort: 7600
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: production
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  - name: jgroup
    port: 7600
    targetPort: 7600

  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 2500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: identity.confeitei.app
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
#        path: /keycloak/(.*)
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - identity.confeitei.app
    secretName: le-identity-confeitei-cert-tls
